--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Derekedelaney.GitHub.io</h1>
-      <h2 class="project-tagline">pintoverflow</h2>
+      <h2 class="project-tagline">My Stuff</h2>
     </section>
 
     <section class="main-content">
